# kana-practice

./: .gitignore  Cargo.toml  README.md
src/: app.rs  error.rs  kana.rs  lib.rs  main.rs  types.rs
