[package]
name = "kana_practice"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
crossterm = "0.28.1"
rand = { version = "0.8.5", features = ["alloc", "std"] }
ratatui = "0.29.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
thiserror = "2.0.6"
tokio = { version = "1.42.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
